# xelite-dx

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  tailwind.css  userdatabase.db
assets/: tailwind.css
assets/styling/: main.css  navbar.css
src/: main.rs
src/database/: db_fns.rs  mod.rs  sql.rs
src/views/: chat_view.rs  home.rs  mod.rs  restore_wallet_options.rs  splashscreen.rs
src/wallet/: mod.rs  utils.rs  wallet_fns.rs
test/: db  snap.0000000000002BD4
