[package]
name = "xelite-dx"
version = "0.1.0"
authors = ["anon"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = "0.4.41"
log = "0.4.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.98"
xelis_common = { git = "https://github.com/xelis-project/xelis-blockchain", branch = "dev", package = "xelis_common" }
xelis_wallet = { git = "https://github.com/xelis-project/xelis-blockchain", branch = "dev", package = "xelis_wallet" }
tokio = { version = "1.45.1", features = ["full"] }
rustls = { version = "0.23.28", features = ["ring"] }
futures = "0.3.31"
daisy_rsx = "0.1.42"

[features]
default = ["mobile"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
